--- a/site/main.css
+++ b/site/main.css
@@ -83,8 +83,8 @@ html {
   transition: filter 0.2s;
 }
 
-.button{
-  border: 2px solid rgb(180, 81, 238);
+.resetbutton{
+  border: 3px solid rgb(180, 81, 238);
   background-color: white; 
   color: rgb(77, 20, 110);
   display: block;
@@ -94,11 +94,10 @@ html {
   cursor: pointer;
   width:90px;
   height:30px;
-  position: absolute;
-  left: 43%;
+  position: center;
 }
 
-.button:hover {
+.resetbutton:hover {
   background-color: rgb(180, 81, 238);
   color: white;
 }
